--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,31 @@ html {
     overflow-x: hidden;
 }
 
+.preload {
+    z-index: 1001;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    background-color: rgb(236, 232, 232);
+    transition: opacity 0.5s ease;
+}
+.preimage {
+    max-width: 500px;
+    max-height: 500px;
+    width: 70%;
+    animation: rotate 5s linear infinite;
+}
+.preload-finish {
+    opacity: 0;
+    pointer-events: none;
+}
+@keyframes rotate {
+    100% {transform: rotate(360deg);}
+}
+
 nav {
     display: flex;
     position: fixed;
