--- a/css/style.css
+++ b/css/style.css
@@ -26,11 +26,12 @@ html {
     position: fixed;
     background-color: rgb(236, 232, 232);
     transition: opacity 0.5s ease;
+    padding-bottom: 5%;
 }
 .preimage {
     max-width: 300px;
     max-height: 300px;
-    width: 70%;
+    width: 50%;
     animation: rotate 5s linear infinite;
 }
 .preload-finish {
